--- a/src/Jogo 3/style.css
+++ b/src/Jogo 3/style.css
@@ -1,5 +1,27 @@
-*{
+* {
     overflow: hidden;
 }
 
+body {
+    background: rgb(150, 188, 245);
+    font-family: "Montserrat";
+    font-weight: 500;
+    padding: 0;
+    margin: 0;
+}
 
+h1 {
+    font-size: 50px;
+    margin: 0;
+    position: absolute;
+    top: 200px;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+}
