--- a/src/Jogo2/Fase1/style.css
+++ b/src/Jogo2/Fase1/style.css
@@ -140,3 +140,15 @@ img {
   height: 300px;
   margin: 0 30px;
 }
+
+/* #botao {
+  position: absolute;
+  background-color: rgb(141, 140, 241);
+  border: none;
+  color: white;
+  font-family: "Montserrat";
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
