--- a/src/style.css
+++ b/src/style.css
@@ -87,6 +87,11 @@ input {
 main > div:first-child {
   position: absolute;
   bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
 }
 
 main > div:first-child > img {
