fix: correção para conseguir voltar a peça para o lugar anterior

--- a/src/Jogo2/Fase1/style.css
+++ b/src/Jogo2/Fase1/style.css
@@ -36,6 +36,10 @@ section {
   flex-direction: column;
 }
 
+#options  .withFill {
+  border: solid 3px rgb(152, 150, 245);
+}
+
 .hold {
   border: solid 5px #ccc;
 }
